# pyholded

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  sbom.cdx.json  sbom.cdx.json.bundle
.github/workflows/: ci.yml
scripts/: _sbom_signing.py  generate_sbom.py  verify_sbom.py
signing/: cosign.pub  signing-config.json
src/pyholded/: __init__.py  _proxies.py  _registry.py  cli.py  client.py  config.py  endpoints.py  exceptions.py  multi.py  output.py  transport.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_multi_account.py  test_output.py  test_package.py  test_registry.py  test_sbom_script.py  test_transport.py
